delete working now

--- a/user.ejs
+++ b/user.ejs
@@ -9,6 +9,7 @@
 <body>
     <table border="1" width="100%">
         <tr>
+            <th>Serial No.</th>
             <th>Username</th>
             <th>Password</th>
             <th>Actions</th>
